--- a/cal_temp_files_2/group_grade_sheet.html
+++ b/cal_temp_files_2/group_grade_sheet.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-        <link rel='stylesheet' href="group_grade_sheet.css">
+        <link rel='stylesheet' href="indiv_sheet.css">
 		
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
@@ -31,20 +31,20 @@
 				</div>
 				<div class="div3"> 
 					<table>
-						<td class=" yellow_bg ">GROUP NAME:</td>
-						<td class=" lyellow_bg " colspan = "3">G R O U P D E T A I L S</td>
+						<td class="left_gborder gray_bg">GROUP NAME:</td>
+						<td class="" colspan = "3">G R O U P D E T A I L S</td>
 						<tr>
-						<td class=" yellow_bg ">PROJECT TITLE:</td>
-						<td class=" lyellow_bg "colspan = "3" >P R O J E C T D E T A I L S</td>
+						<td class="left_gborder gray_bg">PROJECT TITLE:</td>
+						<td class=""colspan = "3" >P R O J E C T D E T A I L S</td>
 						<tr>
-						<td class=" yellow_bg " rowspan ="2">ORAL DEFENSE: <br> SCHEDULE: </td>
-						<td class=" yellow_bg ">DATE:</td>
-						<td class=" yellow_bg ">TIME:</td>
-						<td class=" yellow_bg ">ROOMS:</td>
+						<td class=" left_gborder gray_bg " rowspan ="2">ORAL DEFENSE: <br> SCHEDULE: </td>
+						<td class=" gray_bg ">DATE:</td>
+						<td class=" gray_bg">TIME:</td>
+						<td class=" gray_bg ">ROOMS:</td>
 						<tr>
-						<td class=" lyellow_bg ">DATE DETAILS</td>
-						<td class=" lyellow_bg ">TIME DETAILS</td>
-						<td class=" lyellow_bg ">ROOMS DETAILS</td>
+						<td class="">DATE DETAILS</td>
+						<td class="">TIME DETAILS</td>
+						<td class="">ROOMS DETAILS</td>
 					</table>
 					
 				</div>
@@ -52,15 +52,15 @@
 					<table>
 						<th colspan = "4">PROPONENT NAME(LN,FN, MI.)</th>
 						<tr>
-						<td class=" yellow_bg ">PROPONENT 1:</td>
-						<td class=" lyellow_bg ">PROPONENT D E T A I L S</td>
-						<td class=" yellow_bg ">PROPONENT 2:</td>
+						<td class="left_gborder gray_bg">PROPONENT 1:</td>
+						<td class="">PROPONENT D E T A I L S</td>
+						<td class="left_gborder gray_bg">PROPONENT 2:</td>
 						<td>PROPONENT D E T A I L S</td>
-						<tr class=" lyellow_bg ">
-						<td class=" yellow_bg ">PROPONENT 3:</td>
-						<td class=" lyellow_bg ">PROPONENT D E T A I L S</td>
-						<td class=" yellow_bg ">PROPONENT 4:</td>
-						<td class=" lyellow_bg ">PROPONENT D E T A I L S</td>
+						<tr class="">
+						<td class="left_gborder gray_bg">PROPONENT 3:</td>
+						<td class="">PROPONENT D E T A I L S</td>
+						<td class="left_gborder gray_bg">PROPONENT 4:</td>
+						<td class="">PROPONENT D E T A I L S</td>
 						<tr>
 					</table>
 			
@@ -88,7 +88,7 @@
 						<tr>
 						{% for rubric in rubrics %}
 							<tr>
-								<td class = "tb_title">
+								<td class = "tb_title left_yborder gray_bg">
 									{{ rubric.desc }}
 									<br>
 									(x{{ rubric.weight }})
@@ -109,7 +109,7 @@
 									{{ rubric.rate1 }}
 								</td>
 								{% for x in range(1, 5) %}
-									<td>
+									<td class = "gray_bg">
 										{{ x }} <br> <br>
 										<select name="score" id="score">
 											<option value="five">5</option>
